--- a/styles/game.scss
+++ b/styles/game.scss
@@ -67,9 +67,23 @@ main {
         flex-direction: column;
         align-items: right;
         text-align: center;
-        max-width: 128px;
+        width: 128px;
         padding-top: 3.125rem;
         padding-bottom: 2.5rem;
+        margin-left: 80%;
+
+        @include maxWidth(872px) {
+            margin-left: 75%;
+        }
+
+        @include maxWidth(642px) {
+            margin-left: 70%;
+        }
+
+        @include maxWidth(550px) {
+            width: 100%;
+            margin-left: 0;
+        }
 
         @include maxWidth(664px) {
             padding-bottom: 1rem;
@@ -78,7 +92,8 @@ main {
         p {
             font-weight: 600;
             font-size: 1.5rem;
-            line-height: 30px
+            line-height: 30px;
+            margin-bottom: 5px;
         }
 
         div {
@@ -166,6 +181,12 @@ main {
 
         h2 {
             margin-bottom: 41px;
+        }
+
+        p {
+            max-width: 300px;
+            margin: 0 auto;
+            margin-bottom: 10px;
         }
 
         button {
