--- a/styles/main.scss
+++ b/styles/main.scss
@@ -75,7 +75,23 @@ main {
         margin-bottom: 28px;
     }
 
-    a {
+    input {
+        min-width: 302px;
+        padding: 16px 58px;
+        background: #3D3C4B;
+        outline: none;
+        border: none;
+        margin-bottom: 10px;
+        font-size: 14px;
+        line-height: 18px;
+        color: #FFF;
+    }
+
+    input::placeholder {
+        color: #6A6974;
+    }
+
+    button {
         text-decoration: none;
         font-family: 'Muli', sans-serif;
         min-width: 302px;
@@ -87,11 +103,19 @@ main {
         line-height: 23px;
         color: black;
         cursor: pointer;
-        pointer-events: none;
+        outline: none;
+        border: none;
     }
 
-    label {
+    button[disabled]:hover {
+        cursor: not-allowed;
+    }
+
+    .agree {
         cursor: pointer;
+        font-size: 1rem;
+        margin: 0;
+        text-align: center ;
     }
 
     .agreeBox {
