--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -59,6 +59,12 @@ main h2 {
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 400px) {
+  main h2 {
+    font-size: 3.5rem;
+  }
+}
+
 main p {
   text-align: center;
   max-width: 302px;
