--- a/styles/main.css
+++ b/styles/main.css
@@ -68,7 +68,7 @@ main p {
 
 main input {
   min-width: 302px;
-  padding: 16px 58px;
+  padding: 1rem 3.63rem;
   background: #3D3C4B;
   outline: none;
   border: none;
@@ -134,6 +134,12 @@ main .pop-up {
   display: none;
 }
 
+@media screen and (max-width: 413px) {
+  main .pop-up h1 {
+    font-size: 1.5rem;
+  }
+}
+
 main .pop-up h1,
 main .pop-up p {
   max-width: 90%;
@@ -145,9 +151,16 @@ main .pop-up p {
 
 main .pop-up .cancel {
   position: absolute;
-  right: 40px;
-  top: 20px;
+  right: 30px;
+  top: 5%;
   font-weight: 900;
+  font-size: 1.5rem;
   cursor: pointer;
+}
+
+@media screen and (max-width: 413px) {
+  main .pop-up .cancel {
+    top: 6%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
