--- a/styles/main.scss
+++ b/styles/main.scss
@@ -77,7 +77,7 @@ main {
 
     input {
         min-width: 302px;
-        padding: 16px 58px;
+        padding: 1rem 3.63rem;
         background: #3D3C4B;
         outline: none;
         border: none;
@@ -130,6 +130,12 @@ main {
         color: black;
         display: none;
 
+        @include maxWidth(413px) {
+            h1 {
+                font-size: 1.5rem;
+            }
+        }
+
         h1,
         p {
             max-width: 90%;
@@ -141,10 +147,15 @@ main {
 
         .cancel {
             position: absolute;
-            right: 40px;
-            top: 20px;
+            right: 30px;
+            top: 5%;
             font-weight: 900;
+            font-size: 1.5rem;
             cursor: pointer;
+
+            @include maxWidth(413px) {
+                top: 6%;
+            }
         }
     }
 }
