--- a/styles/endgame.css
+++ b/styles/endgame.css
@@ -60,10 +60,11 @@ main {
 }
 
 main h2 {
+  max-width: 600px;
   font-weight: 900;
-  font-size: 3rem;
-  line-height: 60px;
-  margin-bottom: 16px;
+  font-size: 2rem;
+  line-height: 40px;
+  margin-bottom: 25px;
   text-align: center;
 }
 
