--- a/styles/endgame.scss
+++ b/styles/endgame.scss
@@ -70,10 +70,11 @@ main {
     }
 
     h2 {
+        max-width: 600px;
         font-weight: 900;
-        font-size: 3rem;
-        line-height: 60px;
-        margin-bottom: 16px;
+        font-size: 2rem;
+        line-height: 40px;
+        margin-bottom: 25px;
         text-align: center;
     }
 
