--- a/styles/game.css
+++ b/styles/game.css
@@ -8,11 +8,11 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Muli', sans-serif;
+  background-color: #302f3f;
 }
 
 @media screen and (max-width: 630px) {
   body {
-    background-color: #302f3f;
     padding-bottom: 90px;
   }
 }
@@ -24,6 +24,7 @@ p {
 }
 
 main {
+  display: none;
   position: relative;
   width: 100%;
   height: 100vh;
@@ -322,5 +323,41 @@ main .pop-up .jp {
   background-color: transparent;
   border: 2px solid #3F3D56;
   color: #333333;
+}
+
+.loader {
+  z-index: 99;
+  border: 1.6rem solid white;
+  border-radius: 50%;
+  border-top: 1.6rem solid #00BFA6;
+  width: 12rem;
+  height: 12rem;
+  position: absolute;
+  top: 39%;
+  left: 39%;
+  -webkit-animation: spin 2s linear infinite;
+          animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 /*# sourceMappingURL=game.css.map */
