--- a/styles/game.scss
+++ b/styles/game.scss
@@ -20,9 +20,9 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Muli', sans-serif;
+    background-color: #302f3f;
 
     @include maxWidth(630px) {
-        background-color: #302f3f;
         padding-bottom: 90px;
     }
 }
@@ -34,6 +34,7 @@ p {
 }
 
 main {
+    display: none;
     position: relative;
     width: 100%;
     height: 100vh;
@@ -276,5 +277,27 @@ main {
             border: 2px solid #3F3D56;
             color: #333333;
         }
+    }
+}
+
+.loader {
+    z-index: 99;
+    border: 1.6rem solid white;
+    border-radius: 50%;
+    border-top: 1.6rem solid #00BFA6;
+    width: 12rem;
+    height: 12rem;
+    position: absolute;
+    top: 39%;
+    left: 39%;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
     }
 }
