--- a/styles/endgame.scss
+++ b/styles/endgame.scss
@@ -69,13 +69,24 @@ main {
         bottom 0 right 0;
     }
 
+    @include maxWidth(775px) {
+        background-image: url("../images/endgame\ eclipse.png");
+        background-position: top 0 right 0;
+    }
+
     h2 {
         max-width: 600px;
+        padding: 0 30px;
         font-weight: 900;
         font-size: 2rem;
         line-height: 40px;
         margin-bottom: 25px;
         text-align: center;
+
+        @include maxWidth(435px) {
+            font-size: 1.5rem;
+            line-height: 30px;
+        }
     }
 
     p {
