--- a/styles/game.scss
+++ b/styles/game.scss
@@ -71,29 +71,11 @@ main {
     .score-board {
         display: flex;
         flex-direction: column;
-        align-items: right;
+        justify-content: center;
+        align-items: center;
         text-align: center;
-        width: 128px;
         padding-top: 3.125rem;
         padding-bottom: 2.5rem;
-        margin-left: 80%;
-
-        @include maxWidth(872px) {
-            margin-left: 75%;
-        }
-
-        @include maxWidth(642px) {
-            margin-left: 70%;
-        }
-
-        @include maxWidth(550px) {
-            width: 100%;
-            margin-left: 0;
-        }
-
-        @include maxWidth(664px) {
-            padding-bottom: 1rem;
-        }
 
         p {
             font-weight: 600;
@@ -124,6 +106,15 @@ main {
             font-weight: 900;
             font-size: 1.5rem;
             line-height: 40px;
+
+            @include maxWidth(640px) {
+                font-size: 1.2rem;
+                line-height: 35px;
+            }
+
+            @include maxWidth(529px) {
+                line-height: 30px;
+            }
         }
 
         .answers {
