--- a/styles/main.scss
+++ b/styles/main.scss
@@ -62,6 +62,21 @@ main {
         bottom -1rem right -2rem;
     }
 
+    @include maxWidth(920px) {
+        background-position:
+        top 35rem left 0,
+        top 0 left 0,
+        bottom -2rem right -2rem;
+    }
+
+    @include maxWidth(560px) {
+        background-image: url("../images/index-eclipse.png"),
+                          url("../images/Group\ 20.png");
+
+        background-position: top 0 left 0,
+                             bottom -2rem right -2rem;
+    }
+
     h2 {
         font-weight: 900;
         font-size: 4.5rem;
@@ -115,7 +130,8 @@ main {
         cursor: pointer;
         font-size: 1rem;
         margin: 0;
-        text-align: center ;
+        text-align: center;
+        color: #EB5757;
     }
 
     .agreeBox {
