--- a/styles/main.css
+++ b/styles/main.css
@@ -37,32 +37,41 @@ main {
   background-color: #302f3f;
   background-image: url("../images/Group 19.png"), url("../images/index-eclipse.png"), url("../images/Group 20.png");
   background-repeat: no-repeat;
-  background-position: top 13.1rem left 8rem, bottom 0 left 0, bottom 4.1rem right 5.1rem;
+  background-position: top 13.1rem left 8rem,
+ bottom 0 left 0,
+ bottom 4.1rem right 5.1rem;
   background-attachment: fixed;
 }
 
 @media screen and (max-width: 1303px) {
   main {
-    background-position: top 33rem left 2.94rem, top 0 left 0, bottom 4.1rem right 5.1rem;
+    background-position: top 33rem left 2.94rem,
+ top 0 left 0,
+ bottom 4.1rem right 5.1rem;
   }
 }
 
 @media screen and (max-width: 1185px) {
   main {
-    background-position: top 33rem left 2.94rem, top 0 left 0, bottom -1rem right -2rem;
+    background-position: top 33rem left 2.94rem,
+ top 0 left 0,
+ bottom -1rem right -2rem;
   }
 }
 
 @media screen and (max-width: 920px) {
   main {
-    background-position: top 35rem left 0, top 0 left 0, bottom -2rem right -2rem;
+    background-position: top 35rem left 0,
+ top 0 left 0,
+ bottom -2rem right -2rem;
   }
 }
 
 @media screen and (max-width: 560px) {
   main {
     background-image: url("../images/index-eclipse.png"), url("../images/Group 20.png");
-    background-position: top 0 left 0, bottom -2rem right -2rem;
+    background-position: top 0 left 0,
+ bottom -2rem right -2rem;
   }
 }
 
@@ -177,4 +186,3 @@ main .pop-up .cancel {
     top: 6%;
   }
 }
-/*# sourceMappingURL=main.css.map */
