--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -36,19 +36,25 @@ main {
   background-color: #302f3f;
   background-image: url("../images/Group 19.png"), url("../images/homepageEllipse.png"), url("../images/Group 20.png");
   background-repeat: no-repeat;
-  background-position: top 13.1rem left 8rem, bottom 0 right 10rem, bottom 4.1rem right 5.1rem;
+  background-position: top 13.1rem left 8rem,
+ bottom 0 right 10rem,
+ bottom 4.1rem right 5.1rem;
   background-attachment: fixed;
 }
 
 @media screen and (max-width: 1303px) {
   main {
-    background-position: top 33rem left 2.94rem, bottom 0 right 10rem, bottom 4.1rem right 5.1rem;
+    background-position: top 33rem left 2.94rem,
+ bottom 0 right 10rem,
+ bottom 4.1rem right 5.1rem;
   }
 }
 
 @media screen and (max-width: 1185px) {
   main {
-    background-position: top 33rem left 2.94rem, bottom 0 right 10rem, bottom -1rem right -2rem;
+    background-position: top 33rem left 2.94rem,
+ bottom 0 right 10rem,
+ bottom -1rem right -2rem;
   }
 }
 
@@ -108,4 +114,3 @@ main a {
   cursor: pointer;
   margin-bottom: 20px;
 }
-/*# sourceMappingURL=homepage.css.map */
